[gd_scene load_steps=21 format=4 uid="uid://pm1ydtyuxjy"]

[ext_resource type="Script" uid="uid://dnwrc2q5fpbsr" path="res://scripts/nivel.gd" id="1_2mopt"]
[ext_resource type="Texture2D" uid="uid://d3rb8yimfxck7" path="res://Imagenes/Texturas/pasillo1.png" id="2_yrd7k"]
[ext_resource type="PackedScene" uid="uid://do257tduj2rj5" path="res://escenas/puerta.tscn" id="3_vkssr"]
[ext_resource type="Texture2D" uid="uid://cnxmpflivhljo" path="res://Imagenes/Texturas/objetos.png" id="4_82ch2"]
[ext_resource type="PackedScene" uid="uid://c5vmdkr56auw1" path="res://escenas/jugador.tscn" id="5_rnepu"]
[ext_resource type="Script" uid="uid://bagc1l7bfvrmw" path="res://scripts/interactuables.gd" id="6_0ditk"]
[ext_resource type="Resource" uid="uid://dat2iddutgte2" path="res://Dialogos/piso3.dialogue" id="8_1witr"]
[ext_resource type="PackedScene" uid="uid://c2mhh5e0y7ylm" path="res://escenas/instantaneo.tscn" id="9_yrd7k"]
[ext_resource type="Resource" uid="uid://b3psch1qigtsh" path="res://Dialogos/laboratorio.dialogue" id="10_vkssr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jyo34"]
texture = ExtResource("2_yrd7k")
separation = Vector2i(8, 8)
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 28, -64, 28)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:1/0 = 0
4:2/0 = 0
5:2/0 = 0
5:1/0 = 0
6:1/0 = 0
6:2/0 = 0
7:1/0 = 0
7:0/0 = 0
8:0/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, -44.5934, -64, -44.029, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_op38x"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jyo34")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yrd7k"]
texture = ExtResource("2_yrd7k")
separation = Vector2i(8, 8)
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
10:2/0/y_sort_origin = 24

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vkssr"]
texture = ExtResource("4_82ch2")
separation = Vector2i(2, 2)
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, -38, -64, -40, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_8xujh"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_yrd7k")
sources/1 = SubResource("TileSetAtlasSource_vkssr")

[sub_resource type="CanvasTexture" id="CanvasTexture_kuuix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kuuix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_op38x"]
size = Vector2(20.6918, 39.304)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mopt"]
size = Vector2(287.09, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yrd7k"]
size = Vector2(15.9708, 63.5454)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkssr"]
size = Vector2(230, 106.25)

[node name="piso2" type="Node2D"]
script = ExtResource("1_2mopt")

[node name="Mapa" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAP//AAACAAAAAAD/////AAAEAAAAAAD+////AAABAAAAAAD9////AAAAAAAAAAD8////AAADAAAAAAD7////AAAAAAAAAAABAP//AAABAAAAAAACAP//AAAEAAAAAAADAP//AAACAAAAAAAEAP//AAAGAAAAAAD7/wAAAAAEAAEAAAD8/wAAAAAAAAIAAAD9/wAAAAAAAAIAAAD+/wAAAAAAAAIAAAD//wAAAAAAAAIAAAAAAAAAAAAAAAIAAAACAAAAAAAAAAIAAAABAAAAAAAAAAIAAAADAAAAAAAAAAIAAAAEAAAAAAAAAAIAAAAFAP//AAABAAIAAAAFAP7/AAAEAAIAAAAGAP7/AAAFAAIAAAAFAAAAAAAFAAEAAAAGAAAAAAADAAIAAAAGAP//AAABAAIAADAGAP3/AAADAAEAAAAFAP3/AAADAAEAAAAHAP//AAABAAAAAAAIAP//AAAEAAAAAAAJAP//AAACAAAAAAAKAP//AAABAAAAAAALAP//AAAEAAAAAAAMAP//AAACAAAAAAAHAAAAAAAAAAIAAAAIAAAAAAAAAAIAAAAJAAAAAAAAAAIAAAAKAAAAAAAAAAIAAAALAAAAAAAAAAIAAAAMAAAAAAAAAAIAAAANAP//AAAGAAAAAAANAAAAAAAAAAIAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAAHAP3/AAADAAEAAAAEAP3/AAADAAEAAAAEAP7/AAAEAAEAAAAHAP7/AAAEAAEAADAOAP//AAAAAAAAAAAPAP//AAADAAAAAAAQAP//AAAAAAAAAAARAP//AAABAAAAAAASAP//AAAEAAAAAAATAP//AAAEAAAAAAAUAP//AAACAAAAAAAVAP//AAAAAAAAAAAOAAAAAAAEAAIAAAAPAAAAAAAFAAIAAAAQAAAAAAAAAAIAAAARAAAAAAAAAAIAAAASAAAAAAAAAAIAAAATAAAAAAAAAAIAAAAUAAAAAAAAAAIAAAAVAAAAAAAEAAEAADAOAAEAAAACAAIAAAAPAAEAAAACAAIAAGAWAP//AAAHAAIAAAAWAAAAAAAHAAIAAAAQAAEAAAAGAAIAAAANAAEAAAAHAAIAADADAP7/AAAHAAIAADADAP3/AAAHAAIAADAIAP3/AAAHAAIAAAAIAP7/AAAHAAIAAAD6////AAAHAAIAADD6/wAAAAAHAAIAADAVAAEAAAAGAAIAAAA=")
tile_set = SubResource("TileSet_op38x")

[node name="Puertas" type="Node" parent="."]

[node name="Puerta_e2" parent="Puertas" instance=ExtResource("3_vkssr")]
position = Vector2(640, -329)
scale = Vector2(12.8736, 4.64697)
destino_nivel_tag = "piso_1"
destino_puerta_tag = "e1"

[node name="Spawn" parent="Puertas/Puerta_e2" index="1"]
position = Vector2(-4.85949e-06, 18.3333)

[node name="Puerta_salonp" parent="Puertas" instance=ExtResource("3_vkssr")]
position = Vector2(2752, 166)
scale = Vector2(2.99, 2.3929)
destino_nivel_tag = "salon_principal"
destino_puerta_tag = "salida"
spawn_direccion = "arriba"

[node name="CollisionShape2D" parent="Puertas/Puerta_salonp" index="0"]
position = Vector2(-0.0334473, -0.0296718)

[node name="Spawn" parent="Puertas/Puerta_salonp" index="1"]
position = Vector2(-0.668898, -29.2532)

[node name="Puerta_b1" parent="Puertas" instance=ExtResource("3_vkssr")]
position = Vector2(1984, -39)
scale = Vector2(3.60942, 4.28392)
destino_nivel_tag = "bathroom1"
destino_puerta_tag = "salida"

[node name="Spawn" parent="Puertas/Puerta_b1" index="1"]
position = Vector2(0, 13.9706)

[node name="Puerta_b2" parent="Puertas" instance=ExtResource("3_vkssr")]
position = Vector2(-448, -40)
scale = Vector2(3.60942, 4.28392)
destino_nivel_tag = "bathroom2"
destino_puerta_tag = "salida"

[node name="Spawn" parent="Puertas/Puerta_b2" index="1"]
position = Vector2(0, 13.9706)

[node name="Objetos" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAALAP//AQADAAEAAAACAP//AQADAAEAAAASAP//AQACAAEAAAAGAP3/AQAFAAEAAAAFAP3/AQAFAAEAABA=")
tile_set = SubResource("TileSet_8xujh")

[node name="Balcon" type="TileMapLayer" parent="Objetos"]
modulate = Color(1, 1, 1, 0.831373)
z_index = 1
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD+/wAAAAAKAAIAAAD9/wAAAAAKAAIAAAD8/wAAAAAKAAIAAAD7/wAAAAAKAAIAAAAAAAAAAAAKAAIAAAABAAAAAAAKAAIAAAACAAAAAAAKAAIAAAADAAAAAAAKAAIAAAAEAAAAAAAKAAIAAAAFAAAAAAAKAAIAAAAGAAAAAAAKAAIAAAAHAAAAAAAKAAIAAAAIAAAAAAAKAAIAAAAJAAAAAAAKAAIAAAAKAAAAAAAKAAIAAAALAAAAAAAKAAIAAAAMAAAAAAAKAAIAAAANAAAAAAAKAAIAAAA=")
tile_set = SubResource("TileSet_8xujh")

[node name="jugador" parent="." instance=ExtResource("5_rnepu")]
y_sort_enabled = false

[node name="EfectoLuz" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.254902)
position = Vector2(1919.74, 62)
scale = Vector2(-296.247, -400.128)
texture = SubResource("CanvasTexture_kuuix")

[node name="Colisiones" type="StaticBody2D" parent="."]
position = Vector2(-10, 0)
scale = Vector2(2.0098, 2.01698)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones"]
position = Vector2(283, 74)
scale = Vector2(60.32, 1)
shape = SubResource("RectangleShape2D_kuuix")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colisiones"]
position = Vector2(958.553, 138.275)
scale = Vector2(6.42036, 0.55761)
shape = SubResource("RectangleShape2D_op38x")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Colisiones"]
position = Vector2(1215.29, 73.377)
shape = SubResource("RectangleShape2D_2mopt")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Colisiones"]
position = Vector2(1031.97, 95.1497)
shape = SubResource("RectangleShape2D_yrd7k")

[node name="Interactuables" type="Node" parent="."]
script = ExtResource("6_0ditk")

[node name="instantaneo_lab" parent="Interactuables" instance=ExtResource("9_yrd7k")]
dialogue_resource = ExtResource("10_vkssr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactuables/instantaneo_lab/Area2D" index="0"]
position = Vector2(2656, -9)
scale = Vector2(0.283002, 0.314352)
shape = SubResource("RectangleShape2D_vkssr")
debug_color = Color(0.94902, 0, 0.572549, 0.419608)

[node name="instantaneo_piso3" parent="Interactuables" instance=ExtResource("9_yrd7k")]
position = Vector2(-1781, -303)
dialogue_resource = ExtResource("8_1witr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactuables/instantaneo_piso3/Area2D" index="0"]
position = Vector2(2690, 21)
scale = Vector2(1, 0.480001)
shape = SubResource("RectangleShape2D_vkssr")
debug_color = Color(0.94902, 0, 0.572549, 0.419608)

[node name="ysort" type="Node2D" parent="."]

[editable path="Puertas/Puerta_e2"]
[editable path="Puertas/Puerta_salonp"]
[editable path="Puertas/Puerta_b1"]
[editable path="Puertas/Puerta_b2"]
[editable path="Interactuables/instantaneo_lab"]
[editable path="Interactuables/instantaneo_piso3"]
