[gd_scene load_steps=11 format=4 uid="uid://dbxb2r5tda5w"]

[ext_resource type="Script" uid="uid://dnwrc2q5fpbsr" path="res://scripts/nivel.gd" id="1_lbvd0"]
[ext_resource type="Texture2D" uid="uid://d3rb8yimfxck7" path="res://Imagenes/Texturas/pasillo1.png" id="2_08eua"]
[ext_resource type="PackedScene" uid="uid://do257tduj2rj5" path="res://escenas/puerta.tscn" id="3_wmcmb"]
[ext_resource type="Texture2D" uid="uid://cnxmpflivhljo" path="res://Imagenes/Texturas/objetos.png" id="4_yymsy"]
[ext_resource type="PackedScene" uid="uid://c5vmdkr56auw1" path="res://escenas/jugador.tscn" id="5_jirc4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dqntp"]
texture = ExtResource("2_08eua")
separation = Vector2i(8, 8)
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, -43, -64, -43, 64, -64, 64)
8:2/0 = 0
9:2/0 = 0

[sub_resource type="TileSet" id="TileSet_yvklj"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dqntp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jsm65"]
texture = ExtResource("4_yymsy")
separation = Vector2i(2, 2)
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/y_sort_origin = -10
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.6129, -8.60303, 15.6129, -7.32851, 15.9315, 28.0395, -15.6129, 28.0395)
1:0/0 = 0
1:0/0/y_sort_origin = -10
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31, -42, 33, -43, 32, 65, -31, 64)
2:0/0 = 0
2:0/0/y_sort_origin = -10
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20.711, 31.5444, 20.711, 31.5444, 19.7551, 34.4121, -20.3924, 34.4121)
3:0/0 = 0
3:0/0/y_sort_origin = -10
4:0/0 = 0
4:0/0/y_sort_origin = -10
5:0/0 = 0
5:0/0/y_sort_origin = -10
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-53.625, -28.7882, 56.4474, -29.3526, 54.754, 33.8684, -54.754, 33.8684)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-30.4816, 27.0947, 32.175, 28.2237, 32.175, 53.625, -31.0461, 54.754)

[sub_resource type="TileSet" id="TileSet_y8c3q"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jsm65")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0ijp"]
size = Vector2(40.0249, 20)

[node name="salon2_p1" type="Node2D"]
script = ExtResource("1_lbvd0")

[node name="Mapa" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAP//AAAAAAAAAAABAP//AAACAAAAABACAP//AAAEAAAAABAEAP//AAAFAAAAABADAP//AAAEAAAAABAAAAAAAAACAAIAAFAAAAEAAAABAAIAAAAAAAIAAAABAAIAAAABAAIAAAAAAAEAAAACAAIAAAAAAAEAAAADAAIAAAAAAAEAAAAEAAIAAAABAAIAADAEAAEAAAABAAIAADAEAAAAAAACAAIAADADAAAAAAABAAIAAFACAAAAAAABAAIAAFABAAAAAAABAAIAAFABAAEAAAAAAAEAAAACAAEAAAAAAAEAAAADAAEAAAAAAAEAAAAAAAMAAAACAAIAAAABAAMAAAABAAIAAGACAAMAAAABAAIAAGADAAMAAAABAAIAAGAEAAMAAAACAAIAAGAFAP//AAAHAAIAAAAFAAAAAAAHAAIAAAAFAAEAAAAHAAIAAAAFAAIAAAAHAAIAAAAFAAMAAAAHAAIAAAD/////AAAHAAIAABD//wAAAAAHAAIAABD//wEAAAAHAAIAABD//wIAAAAHAAIAABD//wMAAAAHAAIAABA=")
tile_set = SubResource("TileSet_yvklj")

[node name="Puertas" type="Node" parent="."]

[node name="Puerta_salida" parent="Puertas" instance=ExtResource("3_wmcmb")]
position = Vector2(160, -22)
scale = Vector2(3.26765, 2.51565)
destino_nivel_tag = "piso_1"
destino_puerta_tag = "salon2"

[node name="Spawn" parent="Puertas/Puerta_salida" index="1"]
position = Vector2(-5.72205e-06, 17.0369)

[node name="ysort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Objetos" type="TileMapLayer" parent="ysort"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAiAAoAAAACAAAAAAASAAoAAAACAAAAAAAaAAoAAAACAAAAAAAKAAoAAAACAAAAAAACAAoAAAACAAAAAAAKABAAAAACAAAAAAASABAAAAACAAAAAAAaABAAAAACAAAAAAAiABAAAAACAAAAAAAiABYAAAACAAAAAAAiABwAAAACAAAAAAAaABwAAAACAAAAAAAaABYAAAACAAAAAAASABYAAAACAAAAAAASABwAAAACAAAAAAAKABwAAAACAAAAAAAKABYAAAACAAAAAAACABYAAAACAAAAAAACABwAAAACAAAAAAACABAAAAACAAAAAAASAPz/AAADAAAAAAAaAPz/AAAEAAAAAAAbAP//AAAAAAAAAAAbAAMAAAAFAAAAAAAlAP3/AAAGAAAAAAAhAP3/AAAGAAAAAAA=")
tile_set = SubResource("TileSet_y8c3q")

[node name="jugador" parent="ysort" instance=ExtResource("5_jirc4")]

[node name="Colisiones" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones"]
position = Vector2(320, 522)
scale = Vector2(16.04, 1)
shape = SubResource("RectangleShape2D_o0ijp")

[editable path="Puertas/Puerta_salida"]
